# YT-to-LinkedIn-MCP-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  smithery.yaml  start.sh
app/: __init__.py  main.py
app/models/: models.py
app/routers/: output.py  post_generation.py  summary.py  transcript.py
app/services/: output_service.py  post_generation_service.py  summary_service.py  transcript_service.py
yt_to_linkedin_mcp/: __init__.py  server.py  tools.py
